--- a/vijay.html
+++ b/vijay.html
@@ -2,3 +2,21 @@
   <h1>Vijay</h1>
 </center>
 <hr>
+<p>Vijay, also known as Thalapathy Vijay, is a renowned Indian actor, playback singer, and politician who primarily works in Tamil cinema. Born Joseph Vijay Chandrasekhar on June 22, 1974, in Chennai, Tamil Nadu, he is one of the highest-paid actors in India and has a massive fan following globally.
+
+Career Highlights:
+
+- Vijay has acted in over 68 films, with many of them becoming blockbusters, including Ghilli, Thuppakki, Mersal, Sarkar, Master, Beast, and Leo.
+- He has won numerous awards for his performances, including the Osaka Best Actor Award and the South Indian International Movie Award.
+- Vijay is also a talented playback singer and has sung for various composers, including Ilaiyaraaja, A. R. Rahman, and Yuvan Shankar Raja.
+
+Personal Life:
+
+- Vijay is married to Sangeetha Sornalingam, and they have two children, a son named Sanjay and a daughter named Divya.
+- He is known for his philanthropic efforts and has been involved in various charitable activities.
+
+Politics:
+
+- In February 2024, Vijay announced his retirement from films and launched his political party, Tamilaga Vettri Kazhagam.
+- He has been actively involved in politics, criticizing the BJP, DMK, and the Governor of Tamil Nadu over their policies ¹ ².
+</p>
