--- a/vijay.html
+++ b/vijay.html
@@ -20,3 +20,6 @@ Politics:
 - In February 2024, Vijay announced his retirement from films and launched his political party, Tamilaga Vettri Kazhagam.
 - He has been actively involved in politics, criticizing the BJP, DMK, and the Governor of Tamil Nadu over their policies ¹ ².
 </p>
+
+
+<p>contact: 123433244</p>
